--- a/starter-code/main.css
+++ b/starter-code/main.css
@@ -10,42 +10,80 @@ h1, h2 {
   font-family: 'Rock Salt', cursive;
   margin: 0;
 }
-img {
 
+h1 {
+  font-size: 2.75em;
+}
+img {
+  border: 2px skyblue dashed;
+  padding: 10px;
 }
 input {
-
+  padding: 5px;
 }
 button {
-
+  border-radius: 5px;
+  padding: 5px 8px;
+  background-color: darkgrey;
 }
 nav ul {
-
+  padding: 0;
+  margin-bottom: 10px;
 }
 nav ul li {
-
+  display: inline-block;
+  padding-right: 30px;
 }
-.header {
+nav ul li:first-child {
+  padding-left: 0;
+}
 
+.header {
+  background-color: lightblue;
+  padding: 20px;
+  border-bottom: 1px solid darkblue;
+  margin-bottom: 20px;
 }
 .header h1 {
-
+  display: inline-block;
+  margin: 30px 0 0 0;
+  vertical-align: top;
 }
 .footer {
+  background-color: lightgrey;
+  margin-top: 20px;
+  min-height: 200px;
+  padding-top: 20px;
 
 }
 .content {
+  margin: 0 auto;
+  max-width: 1024px;
+  padding: 0 20px;
+  width: 100%;
 
 }
 .row {
-
+  margin-top: 20px;
 }
 .column {
-
+  display: inline-block;
+  margin-right: 20px;
+  vertical-align: top;
+  width: 30%;
+}
+.column:last-child {
+  margin-right: 0;
+}
+.note, .request {
+  min-height: 180px;
+  padding: 10px 20px;
 }
 .note {
-
+  background-color: #2c51a2;
+  border: 1px solid transparent;
+  color: white;
 }
 .request {
-
+  border: 1px solid grey;
 }
